fix: heading spacing issues

--- a/src/pages/Home/HeroSection/HeroSection.css
+++ b/src/pages/Home/HeroSection/HeroSection.css
@@ -296,5 +296,12 @@
   .hero-image {
     display: none;
   }
+  .hero-text-content {
+    padding-top: 4rem;
+    margin: 0;
+  } 
+  .hero-title {
+    margin-bottom: 0px;
+  }
 }
 
